tests/ui/closures/capture-dynamic-environment.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/capture-dynamic-environment.rs:11:22
   |
LL |            self.v0 = k0 ^ 0x736f6d6570736575;
   |                      ^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0434`.
